--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
@@ -4,6 +4,10 @@
     width: 100%;
     height: 100%;
     background-color: white;
+    ::-webkit-input-placeholder {
+       color: #ccc;
+       font-style: italic;
+    }
     .selected {
         background-color: #ddd !important
     };
@@ -16,9 +20,8 @@
         margin-right: 1em;
         .left-heading {
             display: flex;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid #eee;
             padding: 5px 15px;
-            margin-bottom: 15px;
             h5 {
                 display: inline-block;
             }
@@ -38,9 +41,15 @@
             border: 1px solid #ddd;
             border-radius: 4px;
             background-color: #eee;
-        }   
-        wi-base-treeview {
+        }
+        wi-scroll wi-base-treeview {
             margin: 0;
+            .wi-parent-content {
+                padding-left: 0.5em;
+                .icon-expanded {
+                    display: none;
+                }
+            }
         }
     };
     .right-side {
