--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -67,6 +67,7 @@
             border: 1px solid #fff;
             font-size: 15px;
             background-color: white;
+            padding: 5px;
         }
         button:hover {
             border: 1px solid #ddd;
