--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
@@ -36,8 +36,7 @@
                     container="wiZoneTemplateManager" 
                     on-click-function="wiZoneTemplateManager.templateClickFunction"
                     filter="{{wiZoneTemplateManager.filter}}"
-                    show-context-menu-function="wiZoneTemplateManager.showTreeContextMenuFunction"
-                    >
+                    show-context-menu-function="wiZoneTemplateManager.showTreeContextMenuFunction">
                 </wi-base-treeview>
             </wi-scroll>
         </div>
