--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -4,6 +4,9 @@
     width: 100%;
     height: 100%;
     background-color: white;
+    .color-blue {
+        color: blue
+    }
     .selected {
         background-color: #eee !important
     };
@@ -17,8 +20,8 @@
         .left-heading {
             display: flex;
             border-bottom: 1px solid #ccc;
-            padding: 5px 15px;
-            margin-bottom: 15px;
+            padding: 0px 15px;
+            background-color: #eee;
             h5 {
                 display: inline-block;
             }
@@ -28,17 +31,10 @@
                 justify-content: flex-end;
             }
         }
-        button {
-            border: 1px solid #fff;
+        label {
             font-size: 13px;
-            padding: 5px;
-            background-color: white;
-        }
-        button:hover {
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: #eee;
-        }   
+            padding: 10px 5px;
+        } 
         wi-base-treeview {
             margin: 0;
         }
@@ -54,6 +50,8 @@
             padding: 5px 15px;
             display: flex;
             align-items: center;
+            background-color: #eee;
+            border-bottom: 1px solid #ccc;
             input {
                 height: 25px;
             }
@@ -63,17 +61,10 @@
                 justify-content: flex-end;
             }
         }
-        button {
-            border: 1px solid #fff;
+        label {
             font-size: 15px;
-            background-color: white;
             padding: 5px;
-        }
-        button:hover {
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: #eee;
-        }         
+        }        
         .content-area {
             box-sizing: border-box;
             padding: 1em;
@@ -88,13 +79,16 @@
                     width: 100%;
                 }
                 td {
-                    text-align: center;
                     border-color: #ccc;
+                    text-align: center;
+                    vertical-align: middle;
                 }
                 th {
                     background-color: #f3f3f3;
                     border-color: #ccc;
                     border-bottom: none;
+                    text-align: center;
+                    vertical-align: middle;
                 }
             }    
         }
