--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.less
@@ -20,8 +20,9 @@
         margin-right: 1em;
         .left-heading {
             display: flex;
-            border-bottom: 1px solid #eee;
-            padding: 5px 15px;
+            border-bottom: 1px solid #ccc;
+            padding: 0px 15px;
+            background-color: #eee;
             h5 {
                 display: inline-block;
             }
@@ -31,16 +32,10 @@
                 justify-content: flex-end;
             }
         }
-        button {
-            border: 1px solid #fff;
+        label {
             font-size: 13px;
-            padding: 5px;
-            background-color: white;
-        }
-        button:hover {
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: #eee;
+            padding: 10px 5px;
+            color: blue;
         }
         wi-scroll wi-base-treeview {
             margin: 0;
@@ -63,6 +58,8 @@
             padding: 5px 15px;
             display: flex;
             align-items: center;
+            border-bottom: 1px solid #ccc;
+            background-color: #eee;
             input {
                 height: 25px;
             }
@@ -72,17 +69,11 @@
                 justify-content: flex-end;
             }
         }
-        button {
-            border: 1px solid #fff;
+        label {
+            color: blue;
             font-size: 15px;
-            background-color: white;
             padding:5px;
-        }
-        button:hover {
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            background-color: #eee;
-        }         
+        }    
         .content-area {
             box-sizing: border-box;
             padding: 1em;
@@ -97,13 +88,16 @@
                     width: 100%;
                 }
                 td {
-                    text-align: center;
                     border-color: #ccc;
+                    text-align: center;
+                    vertical-align: middle;
                 }
                 th {
                     background-color: #f3f3f3;
                     border-color: #ccc;
                     border-bottom: none;
+                    text-align: center;
+                    vertical-align: middle;
                 }
             }    
         }
