update css wi zone set manager

--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.less
@@ -20,9 +20,8 @@
         margin-right: 1em;
         .left-heading {
             display: flex;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid #eee;
             padding: 5px 15px;
-            margin-bottom: 15px;
             h5 {
                 display: inline-block;
             }
@@ -45,12 +44,6 @@
         }   
         wi-base-treeview {
             margin: 0;
-            .wi-parent-content {
-                padding-left: 0.5em;
-                .icon-expanded {
-                    display: none;
-                }
-            }
         }
     };
     .right-side {
