--- a/source/app/components/wi-task/wi-task.html
+++ b/source/app/components/wi-task/wi-task.html
@@ -249,7 +249,7 @@
     toggling-method="click">
         <a mfb-button icon='fa fa-plus-circle' label='Add to workflow'
         ng-click='wiTask.addToWorkflowClick()'></a>
-        <a mfb-button icon='fa fa-play-circle-o' label='Run workflow'
+        <a mfb-button icon='fa fa-play-circle-o' label='Run task'
         ng-click="wiTask.runWorkflowClick()"></a>
     </nav>
 </div>
