--- a/source/components/wi-base-treeview/wi-base-treeview.less
+++ b/source/components/wi-base-treeview/wi-base-treeview.less
@@ -60,6 +60,9 @@ wi-base-treeview {
                     flex: 1;
                     text-overflow: ellipsis;
                     overflow: hidden;
+                    .wi-parent-icon {
+                        vertical-align: text-bottom;
+                    }
                     .wi-parent-id {
                         font-size: 80%;
                         display:inline-block;
