--- a/source/components/wi-item-dropdown/wi-item-dropdown.less
+++ b/source/components/wi-item-dropdown/wi-item-dropdown.less
@@ -17,6 +17,7 @@ wi-item-dropdown {
     position:fixed;
     top:auto;
     left:auto;
+    min-width: unset;
 }
 .col-sm-9 .ui-select-bootstrap > .ui-select-choices, 
 .col-sm-9 .ui-select-bootstrap > .ui-select-no-choice {
