--- a/source/components/wi-tabs/wi-tab.less
+++ b/source/components/wi-tabs/wi-tab.less
@@ -35,7 +35,7 @@ wi-tabset {
     border: 1px solid #a8aab4;
     border-bottom-color: transparent;
     background: #fff;
-    border-radius:2px;
+    border-radius: 7px 7px 0 0;
     box-shadow: 3px -2px 2px -2px rgba(0,0,0,0.13);
     padding-top: 2px;
   }
