resize wi-explorer tree

--- a/source/app/components/wi-explorer/wi-explorer.less
+++ b/source/app/components/wi-explorer/wi-explorer.less
@@ -39,12 +39,14 @@ wi-explorer {
       text-indent: 10px;
       border-left: 1px solid #cacbd3;
       flex: 2;
+      overflow: hidden;
       &:first-child {
         flex: 3;
         border-left: none;
       }
       &:last-child {
         flex: 1;
+        flex-shrink: 1;
       }
     }
   }
