--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -10,6 +10,7 @@
         ng-hide="item.data.hide"
         tabindex="0">
         <div class="wi-parent-content">
+            <div style="width: {{12 * wiBaseTreeview.offset}}px"></div>
             <div class="icon-expanded"
                 ng-click="wiBaseTreeview.onCollapse($index)">
                 <i aria-hidden="true" class="fa"
@@ -54,6 +55,7 @@
 
     <div ng-show="item.data.childExpanded">
         <wi-base-treeview
+            offset='wiBaseTreeview.offset+1'
             container="wiBaseTreeview.container"
             config="item.children"
             on-ready-function='wiBaseTreeview.onReadyFunction'
