update flow, task, minors

--- a/source/app/components/wi-task/wi-task.html
+++ b/source/app/components/wi-task/wi-task.html
@@ -253,7 +253,7 @@
     <div id="dragElement"></div>
     <nav mfb-menu position='br' effect='slidein'
     active-icon='fa fa-times' resting-icon='fa fa-bars'
-    toggling-method="hover">
+    toggling-method="click">
         <button mfb-button icon='fa fa-plus-circle' label='Add to flow'
         ng-click='wiTask.addToFlowClick()'></button>
         <button mfb-button icon='fa fa-play-circle-o' label='Run'
