--- a/source/app/components/wi-workflow-designer/wi-flow-designer.less
+++ b/source/app/components/wi-workflow-designer/wi-flow-designer.less
@@ -38,9 +38,7 @@ wi-flow-designer {
         }
       }
     }
-    &:not(.with-error) > .error,
-    &.with-error > .intro,
-    &.with-diagram > .intro {
+    &:not(.with-error) > .error {
       display: none;
     }
     .modeler {
