--- a/source/components/wi-item-dropdown/wi-item-dropdown.less
+++ b/source/components/wi-item-dropdown/wi-item-dropdown.less
@@ -23,3 +23,9 @@ wi-item-dropdown {
 .col-sm-9 .ui-select-bootstrap > .ui-select-no-choice {
     width: 69%;
 }
+
+.col-sm-8  {
+    .ui-select-bootstrap>.ui-select-choices, .ui-select-bootstrap>.ui-select-no-choice {
+        width: 61%;
+    }
+}
