--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -198,7 +198,7 @@
         }
     }
     .vi-track-drawing {
-        pointer-events: none;
+        // pointer-events: none;
 
         >g {
             pointer-events: all;
