--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
@@ -1,36 +1,35 @@
 <div class="zone-set-manager">
+    <style>
+        canvas{
+            width: 100%;
+            height: 26px;
+        }    
+    </style>
     <div class="left-side">
         <div class="template-tree">
             <div class='left-heading'>
                 <h5>Zonesets</h5>
-                <div class="button-area" style="position: relative"> 
+                <div class="button-area" style="position: relative">
                     <label class='btn pull-right' ng-click="wiZoneSetManager.createZoneSet()" ng-disabled="!(wiZoneSetManager.lastSelectedWell || wiZoneSetManager.lastSelectedZoneSet)">
                         <i class="ti-plus" ng-class="{'color-blue': (wiZoneSetManager.lastSelectedWell || wiZoneSetManager.lastSelectedZoneSet), 'color-lightgray': !(wiZoneSetManager.lastSelectedWell || wiZoneSetManager.lastSelectedZoneSet)}"></i>
                     </label>
                     <label title="Refresh zoneSets list" class='btn' ng-click="wiZoneSetManager.refreshZoneSetList()">
                         <i class="ti-reload color-blue"></i>
                     </label>
-                    <label title="More" class="btn" ng-click="wiZoneSetManager.showMoreButtonContextMenuFunction($event, $index)" ng-disabled="!wiZoneSetManager.lastSelectedZoneSet"> 
+                    <label title="More" class="btn" ng-click="wiZoneSetManager.showMoreButtonContextMenuFunction($event, $index)" ng-disabled="!wiZoneSetManager.lastSelectedZoneSet">
                         <i class="ti-more" ng-class="{'color-blue': wiZoneSetManager.lastSelectedZoneSet,'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet}"></i>
                     </label>
                 </div>
             </div>
             <div style='background-color:white;display: flex;padding-left: 7px; border-bottom: 1px solid #ccc;'>
                 <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
-                <input type='text' id="focus" 
-                        style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;border: none' 
-                        ng-model="wiZoneSetManager.filter"
-                        placeholder="[Search]">
+                <input type='text' id="focus" style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;border: none' ng-model="wiZoneSetManager.filter"
+                    placeholder="[Search]">
             </div>
-            <wi-scroll id-scroll="'wzsmTreeScroll'" 
-                        style='flex:1;display:flex;flex-direction:column;height: 80%' 
-                        up-trigger='wiInventory.upTrigger' down-trigger='wiInventory.downTrigger'>
-                <wi-base-treeview name="zoneTemplateManagerTreeview" 
-                    config="wiZoneSetManager.zoneSetConfig" 
-                    container="wiZoneSetManager"
-                    on-click-function="wiZoneSetManager.clickFunction"
-                    filter="{{wiZoneSetManager.filter}}" 
-                    show-context-menu-function="wiZoneSetManager.showTreeContextMenuFunction">
+            <wi-scroll id-scroll="'wzsmTreeScroll'" style='flex:1;display:flex;flex-direction:column;height: 80%' up-trigger='wiInventory.upTrigger'
+                down-trigger='wiInventory.downTrigger'>
+                <wi-base-treeview name="zoneTemplateManagerTreeview" config="wiZoneSetManager.zoneSetConfig" container="wiZoneSetManager"
+                    on-click-function="wiZoneSetManager.clickFunction" filter="{{wiZoneSetManager.filter}}" show-context-menu-function="wiZoneSetManager.showTreeContextMenuFunction">
                 </wi-base-treeview>
             </wi-scroll>
         </div>
@@ -48,16 +47,16 @@
             </select>
             <div class="button-area">
                 <label class='btn' ng-click="wiZoneSetManager.editZone()" ng-disabled="!wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.zoneEditted || wiZoneSetManager.newZoneSet) || !(wiZoneSetManager.zones.length!=0 || !wiZoneSetManager.newZoneSet)">
-                    <i class="ti-check"  ng-class="{'color-blue': !(!wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.zoneEditted || wiZoneSetManager.newZoneSet) || !(wiZoneSetManager.zones.length!=0 || !wiZoneSetManager.newZoneSet)), 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.zoneEditted || wiZoneSetManager.newZoneSet) || !(wiZoneSetManager.zones.length!=0 || !wiZoneSetManager.newZoneSet)}"></i>
+                    <i class="ti-check" ng-class="{'color-blue': !(!wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.zoneEditted || wiZoneSetManager.newZoneSet) || !(wiZoneSetManager.zones.length!=0 || !wiZoneSetManager.newZoneSet)), 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.zoneEditted || wiZoneSetManager.newZoneSet) || !(wiZoneSetManager.zones.length!=0 || !wiZoneSetManager.newZoneSet)}"></i>
                 </label>
                 <label class='btn' ng-click="wiZoneSetManager.deleteZone()" ng-disabled="!wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.selectedZones.length!=0 || wiZoneSetManager.newZoneSet) ">
-                    <i class="ti-close"  ng-class="{'color-blue': !(!wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.selectedZones.length!=0 || wiZoneSetManager.newZoneSet)), 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.selectedZones.length!=0 || wiZoneSetManager.newZoneSet)}"></i>
+                    <i class="ti-close" ng-class="{'color-blue': !(!wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.selectedZones.length!=0 || wiZoneSetManager.newZoneSet)), 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet || !(wiZoneSetManager.selectedZones.length!=0 || wiZoneSetManager.newZoneSet)}"></i>
                 </label>
                 <label title="Create new zone" class='btn' ng-click="wiZoneSetManager.createZone()" ng-disabled="!wiZoneSetManager.lastSelectedZoneSet">
-                    <i class="ti-plus"  ng-class="{'color-blue': wiZoneSetManager.lastSelectedZoneSet, 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet}"></i>
+                    <i class="ti-plus" ng-class="{'color-blue': wiZoneSetManager.lastSelectedZoneSet, 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet}"></i>
                 </label>
                 <label class='btn' ng-click="wiZoneSetManager.refreshZoneList()" ng-disabled="wiZoneSetManager.newZoneSet || !wiZoneSetManager.lastSelectedZoneSet">
-                    <i class="ti-reload"  ng-class="{'color-blue': wiZoneSetManager.lastSelectedZoneSet, 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet}"></i>
+                    <i class="ti-reload" ng-class="{'color-blue': wiZoneSetManager.lastSelectedZoneSet, 'color-lightgray': !wiZoneSetManager.lastSelectedZoneSet}"></i>
                 </label>
             </div>
         </div>
@@ -70,56 +69,60 @@
                             <th width="15%">Zone name</th>
                             <th width="15%">Top Depth</th>
                             <th width="15%">Bottom Depth</th>
-                            <!-- <th width="15%">Sample</th> -->
+                            <!-- <th width="15%">Sample</th>
                             <th width="15%">Background</th>
-                            <th width="15%">Foreground</th>
+                            <th width="15%">Foreground</th> -->
                             <th width="20%">Pattern</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr ng-repeat="zone in wiZoneSetManager.zones | orderBy: wiZoneSetManager.zoneOrder" ng-init="zone.flag = false" ng-class="{'selected': zone.flag}">
-                            <td style="width: 5%;" class="border-right-gray" ng-click="wiZoneSetManager.selectZoneToggle(zone)">
+                            <td style="width: 10%;" class="border-right-gray" ng-click="wiZoneSetManager.selectZoneToggle(zone)">
                                 <i class='glyphicon glyphicon-ok' ng-class="{'color-black': zone.flag, 'color-lightgray': !zone.flag}"></i>
                             </td>
-                            <td width="15%">
-                                <input type="text" ng-model="zone.name" class="form-control" 
+                            <td width="20%">
+                                <!-- <input type="text" ng-model="zone.name" class="form-control" 
                                         ng-change="wiZoneSetManager.onZoneChanged(zone);"
-                                        style="height: auto;">
+                                        style="height: auto;"> -->
+                                {{zone.zone_template.name}}
                             </td>
-                            <td width="15%">
-                                <input type="number" step="any" ng-model="zone.startDepth" class="form-control" 
-                                        ng-change="wiZoneSetManager.onZoneChanged(zone);"
-                                        style="height: auto;">
+                            <td width="20%">
+                                <input type="number" step="any" ng-model="zone.startDepth" class="form-control" ng-change="wiZoneSetManager.onZoneChanged(zone);"
+                                    style="height: auto;">
                             </td>
-                            <td width="15%">
-                                <input type="number" step="any" ng-model="zone.endDepth" class="form-control" 
-                                        ng-change="wiZoneSetManager.onZoneChanged(zone);"
-                                        style="height: auto;">
+                            <td width="20%">
+                                <input type="number" step="any" ng-model="zone.endDepth" class="form-control" ng-change="wiZoneSetManager.onZoneChanged(zone);"
+                                    style="height: auto;">
                             </td>
                             <!-- <td width="15%">
                                 <wi-canvas-rect name="{{zone.name}}" pattern="{{zone.fill.pattern.name}}" foreground="{{zone.fill.pattern.foreground}}" background="{{zone.fill.pattern.background}}"
                                     width="80" height="20">
                                 </wi-canvas-rect>
                             </td> -->
-                            <td width="15%">
-                                <button ng-click="wiZoneSetManager.backgroundZone(zone);" ng-style="{'background-color':zone.fill.pattern.background}" class="form-control wi-form-control thick-border"
-                                        style="width: 103px; height: 28px; margin: auto;">
+                            <!-- <td width="15%"> -->
+                                <!-- <button ng-click="wiZoneSetManager.backgroundZone(zone);" ng-style="{'background-color':zone.fill.pattern.background}" class="form-control wi-form-control thick-border"
+                                        style="width: 103px; height: 28px; margin: auto;"> -->
+                                <!-- <label ng-style="{'background-color':zone.fill.pattern.background}" class="form-control wi-form-control thick-border" style="width: 103px; height: 28px; margin: auto;"> -->
+                                <!-- </label> -->
+                            <!-- </td> -->
+                            <!-- <td width="15%"> -->
+                                <!-- <button ng-click="wiZoneSetManager.foregroundZone(zone);" ng-style="{'background-color':zone.fill.pattern.foreground}" class="form-control wi-form-control thick-border"
+                                    style="width: 103px; height: 28px; margin: auto;">
+                                </button> -->
+                                <!-- <label ng-style="{'background-color':zone.fill.pattern.foreground}" class="form-control wi-form-control thick-border" style="width: 103px; height: 28px; margin: auto;"> -->
+                                <!-- </label> -->
                             </td>
-                            <td width="15%">
-                                <button ng-click="wiZoneSetManager.foregroundZone(zone);" ng-style="{'background-color':zone.fill.pattern.foreground}" class="form-control wi-form-control thick-border"
-                                        style="width: 103px; height: 28px; margin: auto;">
-                                </button>
-                            </td>
-                            <td width="20%">
-                                <button ng-click="wiZoneSetManager.choosePattern(zone)"
-                                        class="btn btn-default thick-border padding-0">
-                                    <wi-canvas-rect name="rowZS_{{$index}}" 
-                                                pattern="{{zone.fill.pattern.name}}" 
-                                                width="100" height="26" 
-                                                foreground="{{zone.fill.pattern.foreground}}"
-                                                background='{{zone.fill.pattern.background}}'>
+                            <td width="30%">
+                                <!-- <button ng-click="wiZoneSetManager.choosePattern(zone)" class="btn btn-default thick-border padding-0">
+                                    <wi-canvas-rect name="rowZS_{{$index}}" pattern="{{zone.fill.pattern.name}}" width="100" height="26" foreground="{{zone.fill.pattern.foreground}}"
+                                        background='{{zone.fill.pattern.background}}'>
                                     </wi-canvas-rect>
-                                </button>
+                                </button> -->
+                                <label class="form-control wi-form-control thick-border" style="padding:0;margin:0;">
+                                    <wi-canvas-rect name="rowZS_{{$index}}" pattern="{{zone.zone_template.pattern}}" width="100" height="26" foreground="{{zone.zone_template.foreground}}"
+                                        background='{{zone.zone_template.background}}'>
+                                    </wi-canvas-rect>
+                                </label>
                             </td>
                         </tr>
                     </tbody>
