--- a/source/app/components/wi-export/wi-export.html
+++ b/source/app/components/wi-export/wi-export.html
@@ -2,7 +2,7 @@
     <div class="left-container">
         <div class="panel panel-default export-left">
             <div style='display:flex;' class='panel-heading'>
-                <h5 style='margin-right:10px;'>Inventory</h5>
+                <h5 style='margin-right:10px;'>{{wiExport.from}}</h5>
                 <!-- <wi-item-dropdown style='flex:1;margin:5px 0;' class='height24px' icon="'project-open-16x16'" on-wi-dropdown-init='wiExport.getProjectList'
                     on-item-changed="wiExport.projectChanged">
                 </wi-item-dropdown> -->
