--- a/source/components/wi-tabs/wi-tab.less
+++ b/source/components/wi-tabs/wi-tab.less
@@ -83,6 +83,7 @@ wi-tabset {
       border-top-color: transparent;
       border-bottom-color: none;
       box-shadow: none;
+      border-radius: unset;
     }
     wi-tab {
       & > div {
