--- a/source/app/components/wi-workflow-designer/wi-flow-designer.html
+++ b/source/app/components/wi-workflow-designer/wi-flow-designer.html
@@ -1,6 +1,6 @@
 <wi-toolbar name="CrossPlotToolbar">
   <wi-button icon="save-16x16" disabled="!wiFlowDesigner.flow.content" handler="wiFlowDesigner.saveFlow" handler-args="true" tooltip="Save Flow"></wi-button>
-  <wi-button icon="delete-16x16" disabled="!wiFlowDesigner.flow.content" handler="wiFlowDesigner.createNewDiagram" tooltip="Clear Diagram"></wi-button>
+  <wi-button icon="delete-16x16" disabled="!wiFlowDesigner.flow.content" handler="wiFlowDesigner.clearDiagram" tooltip="Clear Diagram"></wi-button>
   <wi-button icon="arrow-down-16x16" disabled="!wiFlowDesigner.flow.content" handler="wiFlowDesigner.downloadDiagram" tooltip="Download Diagram"></wi-button>
   <wi-button icon="play-16x16" disabled="!wiFlowDesigner.flow.content" handler="wiFlowDesigner.execute" tooltip="Run Flow"></wi-button>
 </wi-toolbar>
