--- a/source/app/components/wi-curve-listing/wi-curve-listing.html
+++ b/source/app/components/wi-curve-listing/wi-curve-listing.html
@@ -40,27 +40,68 @@
 				<i style="position:absolute;line-height:2.5em;left:0.5em;font-size:14px;" class="fa fa-search"></i>
 				<input type='text' style='text-indent:1.5em;' ng-model='Filter' class="form-control">
 			</div>
-			<div style='flex:1;display:flex;flex-direction:column;overflow: auto;'>
-				<wi-base-treeview id='__listingtWellTree' name="listingTreeview" config="wiCurveListing.wellConfig" container="wiCurveListing"
-				on-ready-function='wiCurveListing.onReady'
-				filter="{{Filter}}" show-id="false">
-				</wi-base-treeview>
+			<div style='flex:1;display:flex;flex-direction:column;overflow: hidden;'>
+				<div style='flex: 1;overflow: overlay;'>
+					<wi-base-treeview id='__listingtWellTree' name="listingTreeview" config="wiCurveListing.wellConfig" container="wiCurveListing"
+					on-ready-function='wiCurveListing.onReady'
+					filter="{{Filter}}" show-id="false">
+					</wi-base-treeview>
+				</div>
+				<div resizable r-directions="['top']" r-flex="true" ng-show="wiCurveListing.isShowPropPanel" style="height: 30%; min-height: 20%; max-height: 50%;margin-top:14px;display: flex;">
+					<div style="flex:1; overflow: overlay;">
+						<h5>Properties</h5>
+						<div class="form-group">
+							<input type="checkbox" class="col-sm-1">
+							<label>Filter per zone</label>
+						</div>
+						<div class="form-group">
+							<label class="col-sm-4">Limit</label>
+							<div class="col-sm-8">
+								<select class='form-control' ng-model="wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.type"
+								ng-change='wiCurveListing.onLimitChange()'>
+									<option value="0">No Limit</option>
+									<option value="1">Limit by index</option>
+									<option value="2">Limit by depth</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group" ng-if='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.type == 1'>
+							<label class='col-sm-4'>Top</label>
+							<div class="col-sm-8">
+								<input type="number" ng-model='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.index[0]' class='form-control'>
+							</div>
+						</div>
+						<div class="form-group" ng-if='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.type == 1'>
+							<label class='col-sm-4'>Bottom</label>
+							<div class="col-sm-8">
+								<input type="number" ng-model='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.index[1]' class='form-control'>
+							</div>
+						</div>
+						<div class="form-group" ng-if='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.type == 2'>
+							<label class='col-sm-4'>Top</label>
+							<div class="col-sm-8">
+								<input type="number" ng-model='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.depth[0]' class='form-control'>
+							</div>
+						</div>
+						<div class="form-group" ng-if='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.type == 2'>
+							<label class='col-sm-4'>Bottom</label>
+							<div class="col-sm-8">
+								<input type="number" ng-model='wiCurveListing.dataSettings[wiCurveListing.currentIndex].limit.depth[1]' class='form-control'>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 	<div class="editing">
 		<div id="dataContainer" wi-element-ready="wiCurveListing.droppableSetting()" class='active'></div>
 	</div>
-	<div resizable r-directions="['left']" r-flex="true" ng-show="wiCurveListing.isShowPropPanel" style="width: 20%; min-width: 10%; max-width: 30%;margin-left:14px;">
-		<wi-container name='WCLPropPanel' title='Properties'>
-			<p>Properties</p>
-        </wi-container>
-	</div>
 </div>
 <div id="dragElement"></div>
 <div class='goTo-widget' ng-if="wiCurveListing.goToWidgetOpened">
 	<input type="number" class="form-control" id='goTo-widget-input' ng-model='wiCurveListing.goToRowInput' wi-enter='wiCurveListing.goToRowEnter()' wi-element-ready='wiCurveListing.focusInput("#goTo-widget-input")'>
-	<p>Type a row number between 0 and {{wiCurveListing.dataSettings[wiCurveListing.currentIndex].length - 1}} to navigate to</p>
+	<p>Type a row number between 0 and {{wiCurveListing.dataSettings[wiCurveListing.currentIndex].length}} to navigate to</p>
 </div>
 <div class="find-widget" ng-if='wiCurveListing.findWidgetOpened'>
 	<input type="text" class="form-control" ng-model='wiCurveListing.findInput' placeholder="Find" id="find-widget-input"
