--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -798,4 +798,13 @@ input[type=checkbox].input-check {
 .list-body wi-scroll .scroll-container {
 	border: 1px solid #ccc;
 	border-top: none;
-}  
+} 
+.text-heading {
+    color: #428bca;
+    font-size: 15px;
+    font-style: italic;
+    margin-bottom: 0;
+}
+.box-shadow-ccc {
+	box-shadow: 2px 2px 5px #ccc;
+}
