--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
@@ -1,6 +1,6 @@
 <div class="zone-set-manager">
     <style>
-        canvas{
+        .zone-set-manager canvas{
             width: 100%;
             height: 26px;
         }    
