--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -58,8 +58,10 @@ wi-d3 {
         }
     }
     .wi-d3-track-container:nth-last-child(2) {
-        .vi-track-vertical-resizer {
-            border-right: 1px solid black;
+        .wi-d3-track-component:nth-last-child(1) {
+            .vi-track-vertical-resizer {
+                border-right: 1px solid black;
+            }
         }
     }
 }
